--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<meta charset="UTF-8">  
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">  
 	<link rel="stylesheet" type="text/css" href="style.css">  
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+  	<meta name="description" content="一键保存并下载文心一言对话内容到本地PDF文件">
+
+	<link rel="icon" href="logo.png" type="image/x-icon">
 </head>  
 <body>  
 	<header>  
