update for google

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   	<meta name="description" content="一键保存并下载文心一言对话内容到本地PDF文件">
 
 	<link rel="icon" href="logo.png" type="image/x-icon">
+	<meta name="google-site-verification" content="KlK0rFrmwLY5bLTXaIEdXEXH7xI_hyyzjVuOPFj-zOI" />
 </head>  
 <body>  
 	<header>  
