update for yiyan 0409

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section>  
 			<h2>下载地址</h2>  
 			<p>你可以在这里下载文心一言 PDF 下载地址如下：</p>  
-            <p>			<a href="https://chrome.google.com/webstore/detail/chatgpt-to-pdf/dpoljalgoeeedhiafbfkgdomfknebheh" class="chrome" target="_blank" title="Add to Chrome"><img src="cc60.png"
+            <p>			<a href="https://chrome.google.com/webstore/detail/%E6%96%87%E5%BF%83%E4%B8%80%E8%A8%802pdf/ljhejmkflbdkemikeelnejjgjbjcajah" class="chrome" target="_blank" title="Add to Chrome"><img src="cc60.png"
                 alt="Add to Chrome"></a></p>  
 		</section>  
 		<section>  
